Fix spacing on tutorial cards

--- a/src/app/components/tutorials/view-tutorials/view-tutorials.component.sass
+++ b/src/app/components/tutorials/view-tutorials/view-tutorials.component.sass
@@ -1,6 +1,6 @@
 app-tutorial-card
-    margin: 10px
-    height: 436px
+    margin: 20px
+    max-height: 426px
 
 .tutorial-card-container
     display: flex
