--- a/src/app/sub-components/tutorial-card/tutorial-card.component.sass
+++ b/src/app/sub-components/tutorial-card/tutorial-card.component.sass
@@ -1,8 +1,8 @@
 .tutorial-card
     max-width: 300px
     cursor: pointer
-    max-height: 436px
-    min-height: 436px
+    max-height: 426px
+    min-height: 426px
 
 mat-card-content
     p
